--- a/src/style/App.css
+++ b/src/style/App.css
@@ -6,12 +6,14 @@ body {
     color: white;
     margin: 0 auto;
     max-width: 1800px;
+    
 }
 
 #root {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 
 .timeline {
@@ -203,8 +205,180 @@ body {
     gap: 20px;
 }
 
+.tweet-actions :hover{
+    background-color: rgb(197, 193, 187);
+    border-radius: 60px;
+}
+
 .left-sidebar {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+    position: sticky;
+    top: 0;
+    height: 100%;
+}
+
+
+
+.link {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.link-li {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.link :hover {
+
+    background-color: rgb(127, 94, 52);
+    border-radius: 60px;
+    
+}
+
+.bouton-tweet {
+display: flex;
+width: 225px;
+height: 52px;
+padding: 16px 0px;
+justify-content: center;
+align-items: center;
+flex-shrink: 0;
+border-radius: 60px;
+background-color: #1D9BF0;
+color: whitesmoke;
+}
+
+.profile-body{
+width: 40px;
+height: 40px;
+flex-shrink: 0;
+border-radius: 40px;
+border: 1px solid #000;
+color: #D9D9D9;
+background-color: #000;
+}
+
+.text {
+color: #D9D9D9;
+font-family: SF Pro Text;
+font-size: 15px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+
+.textContent{
+
+    color: #6E767D;
+font-family: SF Pro Text;
+font-size: 15px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+
+.textDiv{
+    display: flex;
+    flex-direction: column;
+}
+
+.imageText{
+    display: flex;
+    gap: 15px;
+}
+
+.conteneur :hover{
+    background-color: rgb(127, 94, 52);
+    border-radius: 60px;
+    
+}
+
+.settings{
+display: flex;
+align-items: self-start;
+flex-shrink: 0;
+color: #6E767D;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 13px;
+}
+
+
+
+.settingsparent{
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+
+
+.titre{
+    display: flex;
+    justify-content:space-between ;
+}
+
+.texte{
+    color: #1D9BF0;
+}
+
+.space{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.separate{
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+}
+
+.key{
+width: 16.667px;
+height: 16.88px;
+flex-shrink: 0;
+}
+
+
+.author1{
+    display: flex;
+}
+
+
+.image{
+  display: flex;
+width: 40px;
+height: 40px;
+}
+
+
+.back{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    background-color: #f0cd1d;
+}
+
+.reglage{
+    display: flex;
+}
+
+.background{
+    background-color: #aa9743;
+    border-radius: 2px;
+    gap: 50px;
+
+}
+
+.division{
+    display: flex;
+
 }
