--- a/src/style/App.css
+++ b/src/style/App.css
@@ -227,19 +227,21 @@ body {
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
+    list-style: none;
 }
 
 .link-li {
     display: flex;
     justify-content: space-between;
     gap: 20px;
+    text-decoration: none;
+    color: white;
 }
 
 .link :hover {
 
     background-color: rgb(127, 94, 52);
-    border-radius: 60px;
-    
+    border-radius: 60px; 
 }
 
 .bouton-tweet {
