--- a/src/style/App.css
+++ b/src/style/App.css
@@ -414,3 +414,17 @@ height: 40px;
     font-size: 15px;
     margin: 10px;
 }
+.times{
+    display: flex;
+}
+
+.follow1{
+    display: flex;
+    justify-content: space-between;
+}
+
+.follow2{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
