--- a/src/style/App.css
+++ b/src/style/App.css
@@ -428,3 +428,16 @@ height: 40px;
     flex-direction: column;
     gap: 15px;
 }
+
+.profil2{
+    display: flex;
+    width: 40px;
+    height: 40px;
+}
+
+.separate2{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    
+}
