--- a/src/style/App.css
+++ b/src/style/App.css
@@ -24,7 +24,7 @@ body {
 }
 
 .header {
-    padding: 1.5rem 1rem;
+    padding: 0.5rem 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -229,44 +229,37 @@ body {
 }
 
 .tweet-action3:hover button, .tweet-action3:hover p{
-    background-color: rgb(132, 49, 19);
-    
-    
+    background-color: rgb(132, 49, 19);  
 }
-
 .left-sidebar {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 30px;
     position: sticky;
     top: 0;
-    height: 100%;
+    height: 100%;  
+    left: 50px;
+    width: 300px;
 }
 
 
-
-.link {
+.link1 {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     gap: 20px;
-    list-style: none;
+    font-size: 18px;
+   
+     
 }
 
-.link-li {
+
+
+/* .link-li {
     display: flex;
     justify-content: space-between;
     gap: 20px;
     text-decoration: none;
     color: white;
-}
+} */
 
-.link :hover {
 
-    background-color: rgb(127, 94, 52);
-    border-radius: 60px; 
-}
 
 .bouton-tweet {
 display: flex;
@@ -313,6 +306,10 @@ line-height: normal;
 .textDiv{
     display: flex;
     flex-direction: column;
+    gap: 1px;
+    line-height: 1px;
+    
+    
 }
 
 .imageText{
@@ -339,9 +336,6 @@ font-size: 13px;
     justify-content: space-between;
     
 }
-
-
-
 .titre{
     display: flex;
     justify-content:space-between ;
@@ -361,6 +355,7 @@ font-size: 13px;
     display: flex;
     flex-direction: column;
     gap: 1px;
+    
 }
 
 .key{
@@ -394,16 +389,15 @@ height: 40px;
     display: flex;
 }
 
-.background{
-    background-color: #aa9743;
-    border-radius: 2px;
-    gap: 50px;
-
-}
-
 .division{
     display: flex;
-    justify-content: space-between;
+    gap: 3px;
+    
+}
+
+.div3{
+    position: relative;
+    top: 15px;
 }
 .trend{
     display: flex;
@@ -411,16 +405,12 @@ height: 40px;
     margin: 10px;
 }
 
-.trend2{
+.trend1{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    gap: 1px;
     
 }
-
-.trend4{
-    margin: 10px;
-}
-
 .trend3{
     display: flex;
     flex-direction: column;
@@ -447,6 +437,7 @@ height: 40px;
 }
 .times{
     display: flex;  
+    gap: 5px;
 }
 
 .follow1{
@@ -459,10 +450,10 @@ height: 40px;
 .follow2{
     display: flex;
     flex-direction: column;
-    gap: 0.5px;
-    margin: 1px;
-    background-color: #2F3336;
-    border-radius: 15px;
+ 
+}
+.follow0{
+    margin: 20px; 
 }
 
 .profil2{
@@ -477,9 +468,7 @@ height: 40px;
     gap: 20px;
     
 }
-.follow0{
-    margin:15px;
-}
+
 
 .trends3{
     background-color: #2F3336;
@@ -487,64 +476,172 @@ height: 40px;
     border-radius: 15px;
    
 }
-
-.trends7{
-
- background-color:transparent;
- 
-  
-}
-
-.trends6{
-    display: flex;
-    gap: 25px;
-    margin: 20px;  
-
-}
-
-.trends8{
-    display: flex;
-    gap: 25px;
-    margin: 5px;
-}
-
-.trends10{
-    
-    margin:1px;
-    text-align: center;
-    border-width: 0.5px;
-    height: 27px;
-    background-color:#2F3336;
- 
-
- }
-
  .other{
     color: #475055;
+    position: relative;
+   top: 25px;
  }
 
  .button2{
     border-radius: 15px;
     width: 60px;
-height: 30px;
-font-size: 12px;
+    height: 30px;
+    font-size: 12px;
  }
 
  .times2{
-    display: flex; 
-    
+    display: flex;    
  }
 
 .footer{
     display: flex;
     flex-direction: column;
-    gap: 195px;
+    gap: 100px;
+    position: relative;
+    top: 30px;
 }
 .likes{
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 }
+.search1{
+    display: flex;
+    justify-content: space-between;
+    background-color: #2F3336;
+    border-radius: 20px;
+     position: relative;
+    right: 2px;
+    top:6px;   
+}
+.background2{
+    position: relative;
+    top: 4px;
+}
+   
+.search2{
+    border: none;
+    outline: none;
+    font-size: 1rem;
+    color: white;
+    resize: none;
+    background-color: #2F3336;
+    border-radius: 20px;   
+}
+.search3{  
+display: flex;
+width: 12px;
+height: 12px;
+padding: 12px;
+}
+.from{
+    color: #707476; 
+    margin-left: 20px;   
+}
+.color1{
+    color: rgb(56, 56, 207);  
+    margin-left: 20px; 
+    position: relative; 
+    color: #1D9BF0;
+    background-color: transparent;
+    border: none;
+    font-size: 15px;
+    margin: 10px;  
+
+}
+.from1{
+    position: relative;
+    left: 15px;
+    color: #707476;   
+}
+
+.div2{
+    display: flex;
+    justify-content: space-between; 
+    gap: 15px;   
+    position: relative;
+    right: 10px;
+    
+    
+}
+
+.img2{
+    width: 14px;
+    height: 14px;
+    position: relative;
+    right: 15px;
+    
+}
+
+.trendTitle{
+display: flex;
+justify-content: space-between;
+margin-left:  10px;
+position: relative;
+top: px;
+}
+
+.htag{
+    position: relative;
+    left: 13px;
+}
+.t-trend{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    position: relative;
+    margin-right: 40px;
+    
+}
+
+.t-trend2{
+    background-color: #2F3336;
+    position: relative;
+    top: 2cqmin;
+    border-radius: 25px;  
+}
+
+.t-trend3{
+    background-color: #2F3336;
+   position: relative;
+   top: 25px;
+   border-radius: 25px;
+}
+.link{
+    
+    color: white;
+    text-transform: none;
+    text-decoration: none;  
+}
+.link :hover {
+
+    background-color: rgb(58, 58, 57);
+    border-radius: 25px; 
+   width: 100px;
+   
+}
+
+.link2:hover {
+    width: 25px;
+    height: 25px;
+}
+.link2{
+    width: 25px;
+    height: 25px;
+    
+}
+
+.item{
+    width: 16px;
+    height: 16px;
+}
+
+.htagColor{
+    position: relative;
+    left: 4px;
+    color: #707476; 
+}
+
 
 
 
