--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
 
 body {
     background-color: black;
     color: white;
     margin: 0 auto;
-    max-width: 1800px;
-    
+    max-width: 1800px; 
 }
 
 #root {
@@ -23,13 +22,13 @@ body {
     border-right: 1px solid #2F3336;
 }
 
-.header {
+/* .header {
     padding: 0.5rem 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #2F3336;
-}
+} */
 
 .top-tweets {
     width: 1.5rem;
@@ -41,14 +40,14 @@ body {
     font-weight: bold;
 }
 
-.tweet-editor {
+/* .tweet-editor {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
     gap: 20px;
     padding: .3rem 1rem;
     border-bottom: 1px solid #2F3336;
-}
+} */
 
 .avatar {
     flex: 0 0 70px;
@@ -61,9 +60,9 @@ body {
     border-radius: 100%;
 }
 
-.tweet-editor-form {
+/* .tweet-editor-form {
     flex: auto;
-}
+} */
 
 .tweet-editor-input {
     height: 60px;
@@ -107,20 +106,20 @@ body {
     font-size: 1rem;
 }
 
-.tweet {
+/* .tweet {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     gap: 20px;
     padding: 1.5rem 1rem;
     border-bottom: 1px solid #2F3336;
-}
+} */
 
-.tweet-avatar {
-    /*height: 70px;*/
-    /*width: 70px;*/
+/* .tweet-avatar {
+    height: 70px;
+    width: 70px;
     flex: 0 0 70px;
-}
+} */
 
 .tweet-avatar img {
     max-width: 100%;
@@ -128,51 +127,51 @@ body {
     border-radius: 100%;
 }
 
-.tweet-content {
+/* .tweet-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     gap: 30px;
     width: 100%;
-}
+} */
 
-.tweet-body {
+/* .tweet-body {
     display: flex;
     flex-direction: column;
     gap: .5rem;
-}
+} */
 
-.tweet-title {
+/* .tweet-title {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     gap: 10px;
     font-size: 1rem;
-}
+} */
 
 .tweet-title svg {
     width: 1.2rem;
     height: auto;
 }
 
-.tweet-title-author {
+/* .tweet-title-author {
     font-size: 1rem;
-}
+} */
 
-.tweet-title-details {
+/* .tweet-title-details {
     color: #6E767D;
-}
+} */
 
 .tweet-text {
     color: #D9D9D9;
     font-size: 1rem;
 }
 
-.tweet-image {
+/* .tweet-image {
     width: 100%;
     padding: .3rem 0 0 0;
-}
+} */
 
 .tweet-image img {
     max-width: 100%;
