--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,6 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
 
+
+
 body {
     background-color: black;
     color: white;
@@ -16,56 +18,57 @@ body {
     position: relative;
 }
 
-.timeline {
+/* .timeline {
     flex: 0 0 800px;
     font-family: 'Inter', sans-serif;
     border-left: 1px solid #2F3336;
     border-right: 1px solid #2F3336;
-}
+} */
 
-.header {
+/* .header {
     padding: 0.5rem 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #2F3336;
-}
+} */
 
-.top-tweets {
+/* .top-tweets {
     width: 1.5rem;
     height: auto;
-}
+} */
 
-.page-title {
+/* .page-title {
     font-size: 1.5rem;
     font-weight: bold;
-}
+} */
 
-.tweet-editor {
+ /* .tweet-editor {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: 20px;
+    gap: 60px;
     padding: .3rem 1rem;
     border-bottom: 1px solid #2F3336;
-}
+}  */
 
 .avatar {
     flex: 0 0 70px;
-    /*padding: 0 rem;*/
+    /* padding: 0 rem; */
+
 }
 
-.avatar img {
+/* .avatar img {
     max-width: 100%;
     max-height: 100px;
     border-radius: 100%;
-}
+} */
 
-.tweet-editor-form {
+ /* .tweet-editor-form {
     flex: auto;
-}
+}  */
 
-.tweet-editor-input {
+  .tweet-editor-input {
     height: 60px;
     width: 100%;
     border: none;
@@ -76,28 +79,28 @@ body {
     resize: none;
     padding: 10px 0 0 0;
     margin: 13px 0;
-}
+}  
 
-.tweet-editor-buttons {
+/* .tweet-editor-buttons {
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
+} */
 
-.tweet-editor-actions {
+/* .tweet-editor-actions {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     /*padding: 0.8rem 0;*/
-    gap: 1rem;
-}
+    /* gap: 1rem;
+} */ */
 
 .tweet-editor-actions button {
     background-color: transparent;
     border: none;
 }
 
-.button {
+/* .button {
     text-transform: capitalize;
     padding: .7rem 1.5rem;
     border: none;
@@ -105,7 +108,7 @@ body {
     background-color: #1D9BF0;
     color: white;
     font-size: 1rem;
-}
+} */
 
 .tweet {
     display: flex;
@@ -183,13 +186,13 @@ body {
     border-width: 1px;
 }
 
-.tweet-actions {
+/* .tweet-actions {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 5rem;
     font-size: 1rem;
-}
+} */
 
 .tweet-actions svg {
     width: 1rem;
@@ -272,15 +275,15 @@ body {
     align-items: center;
     gap: 20px;
     font-size: 18px;   
-}
+} 
 
-/* .link-li {
+.link-li {
     display: flex;
     justify-content: space-between;
     gap: 20px;
     text-decoration: none;
     color: white;
-} */
+} 
 
 .bouton-tweet {
 display: flex;
@@ -293,9 +296,9 @@ flex-shrink: 0;
 border-radius: 60px;
 background-color: #1D9BF0;
 color: whitesmoke;
-}
+} 
 
-.profile-body{
+ .profile-body{
 width: 40px;
 height: 40px;
 flex-shrink: 0;
@@ -303,7 +306,7 @@ border-radius: 40px;
 border: 1px solid #000;
 color: #D9D9D9;
 background-color: #000;
-}
+} 
 
 .text {
 color: #D9D9D9;
@@ -312,7 +315,7 @@ font-size: 15px;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
-}
+} 
 
 .textContent{
 
@@ -322,25 +325,25 @@ font-size: 15px;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
-}
+} 
 
 .textDiv{
     display: flex;
     flex-direction: column;
     gap: 1px;
     line-height: 1px;   
-}
+} 
 
-.imageText{
+ .imageText{
     display: flex;
     gap: 15px;
-}
+} 
 
 .conteneur :hover{
     background-color: rgb(131, 112, 87);
     border-radius: 60px;
     
-}
+} 
 
 .settings{
 display: flex;
@@ -377,11 +380,11 @@ font-size: 13px;
     
 }
 
-.key{
+/* .key{
 width: 16.667px;
 height: 16.88px;
 flex-shrink: 0;
-}
+} */
 .author1{
     display: flex;
 }
@@ -403,16 +406,16 @@ height: 40px;
     display: flex;
 }
 
-.division{
+/* .division{
     display: flex;
     gap: 3px;
     
-}
+} */
 
-.div3{
+/* .div3{
     position: relative;
     top: 15px;
-}
+} */
 .trend{
     display: flex;
     justify-content: space-between;
@@ -477,7 +480,7 @@ height: 40px;
     gap: 100px;
     position: relative;
     top: 30px;
-}
+} 
 .likes{
     display: flex;
     justify-content: space-between;
@@ -541,7 +544,7 @@ padding: 12px;
     gap: 15px;   
     position: relative;
     right: 10px;  
-}
+} 
 
 .img2{
     width: 14px;
@@ -581,24 +584,24 @@ top: px;
    top: 25px;
    border-radius: 25px; 
 }
-.link{
+/* .link{
     color: white;
     text-transform: none;
     text-decoration: none;  
-}
+} */
 .link :hover {
     background-color: rgb(58, 58, 57);
     border-radius: 25px; 
    width: 100px;  
 }
-.link2:hover {
+ /* .link2:hover {
     width: 25px;
-    height: 25px;
-}
-.link2{
+    height: 25px;} */
+ */
+/* .link2{
     width: 25px;
     height: 25px;   
-}
+} */
 .item{
     width: 16.667px;
     height: 16.88px;
