--- a/src/style/App.css
+++ b/src/style/App.css
@@ -489,7 +489,7 @@ height: 40px;
 .search1{
     display: flex;
     justify-content: space-between;
-    background-color: #2F3336;
+    background-color: #111213;
     border-radius: 20px;
      position: relative;
     right: 2px;
@@ -508,15 +508,17 @@ height: 40px;
     font-size: 1rem;
     color: white;
     resize: none;
-    background-color: #2F3336;
-    border-radius: 20px;   
+    background-color: #111213;
+    border-radius: 15px;   
 }
-.search3{  
+/* .search3{  
 display: flex;
 width: 12px;
 height: 12px;
 padding: 12px;
-}
+} */
+
+
 .from{
     color: #707476; 
     margin-left: 20px;   
@@ -572,13 +574,13 @@ top: px;
 } */
 
 .t-trend2{
-    background-color: #2F3336;
+    background-color: #111213;
     position: relative;
     top: 2cqmin;
     border-radius: 25px;  
-}
+} 
 .t-trend3{
-    background-color: #2F3336;
+    background-color: #111213;
    position: relative;
    top: 25px;
    border-radius: 25px; 
@@ -644,10 +646,11 @@ line-height: normal;
     position: relative;
     left: 245px;
     top: -40px;
-    color: #0F1419;
+    color: #090b0e;
     font-family: SF Pro Text;
     font-style: normal;
-    border-radius: 15px;
+    border-radius: 10px;
+    background-color: #D9D9D9;
   
 }
 
